--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -22,7 +22,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    implementation "joda-time:joda-time:2.2"
+    compile "joda-time:joda-time:2.2"
     testImplementation "junit:junit:4.12"
 }
 // end::dependencies[]
