--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -23,7 +23,7 @@ targetCompatibility = 1.8
 
 dependencies {
     compile "joda-time:joda-time:2.2"
-    testImplementation "junit:junit:4.12"
+    testimplementation "junit:junit:4.12"
 }
 // end::dependencies[]
 
